--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
 
 <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
     
-<!--     <script src="assets/javascript/app.js"></script> -->	
+    <script src="assets/javascript/app.js"></script>	
 	<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 </html>
