--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<link rel="stylesheet" type="text/css" href="http://meyerweb.com/eric/tools/css/reset/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">	
-
-
-
 	<title>Rock, Paper, Scissors</title>
 </head>
 
@@ -22,8 +18,7 @@
 	<div id="actionArea">
 		<div id="player1" class="battleArena">
 			<div id="waiting1">Waiting on Player 1</div>
-<!-- 			<div id="player1"
- -->		</div>
+		</div>
 		
 		<div id="outcome" class="battleArena">
 		</div>	
@@ -33,12 +28,8 @@
 			</div>
 		</div>
 	</div>
-
 </body>
-
-
-<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-    
+	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
     <script src="assets/javascript/app.js"></script>	
 	<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 </html>
